--- a/Auteur.html
+++ b/Auteur.html
@@ -44,11 +44,11 @@
 
                 <nav id="Navigation">
                     <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
-                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;" aria-label="Chaîne YouTube" ></span></a>
                     <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"><span
-                            class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                            class="fa-brands fa-2x fa-steam" style="color: #00355e;" aria-label="Steam"></span></a>
                     <a href="https://x.com/TeamCherryGames" target="_blank"><span class="fa-brands fa-2x fa-x-twitter"
-                            style="color: #ffffff;"></span></a>
+                            style="color: #ffffff;" aria-label="X"></span></a>
 
 
                 </nav>
@@ -65,12 +65,12 @@
 
                         <nav id="Burger_Navigation">
                             <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
-                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;" aria-label="Chaîne YouTube"></span></a>
                             <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
                                 target="_blank"><span class="fa-brands fa-2x fa-steam"
-                                    style="color: #00355e;"></span></a>
+                                    style="color: #00355e;" aria-label="Steam"></span></a>
                             <a href="https://x.com/TeamCherryGames" target="_blank"><span
-                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;" aria-label="X"></span></a>
 
 
                         </nav>
@@ -113,22 +113,22 @@
             <h2>Centre d'intérêt</h2>
             <div class="interet">
                 <div>
-                    <h3><span class="fa-solid fa-guitar"></span> Ukulele</h3>
+                    <h2><span class="fa-solid fa-guitar"></span> Ukulele</h2>
                     <p class="paragraphe">J'ai un ukulele depuis ma naissance mais j'en joue réel depuis 3ans. </p>
                 </div>
                 <div>
-                    <h3><span class="fa-solid fa-cat"></span> Eustache</h3>
+                    <h2><span class="fa-solid fa-cat"></span> Eustache</h2>
                     <p class="paragraphe">Mon chat Eustache est ma plus grande passion dans ma vie, il n'existe pas de
                         chat plus beau.
                     </p>
                 </div>
                 <div>
-                    <h3><span class="fa-solid fa-gamepad"></span> Jeu Vidéo</h3>
+                    <h2><span class="fa-solid fa-gamepad"></span> Jeu Vidéo</h2>
                     <p class="paragraphe">Durant mon temps libre, il m'arrive aussi de jouer aux jeux videos en solo ou
                         en multijouer.</p>
                 </div>
                 <div>
-                    <h3><span class="fa-solid fa-cube"></span> Modélisation 3D</h3>
+                    <h2><span class="fa-solid fa-cube"></span> Modélisation 3D</h2>
                     <p class="paragraphe">Je fais aussi de la modélisation 3d sur Blender. J'ai un peu de mal mais mon
                         niveau commence
                         enfin à s'améliorer. </p>
