--- a/Sujet.html
+++ b/Sujet.html
@@ -41,11 +41,11 @@
 
                 <nav id="Navigation">
                     <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
-                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;" aria-label="Chaîne YouTube"></span></a>
                     <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"><span
-                            class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                            class="fa-brands fa-2x fa-steam" style="color: #00355e;" aria-label="Steam"></span></a>
                     <a href="https://x.com/TeamCherryGames" target="_blank"><span class="fa-brands fa-2x fa-x-twitter"
-                            style="color: #ffffff;"></span></a>
+                            style="color: #ffffff;" aria-label="X"></span></a>
 
 
                 </nav>
@@ -60,14 +60,14 @@
                         <a href="Auteur.html"><p>Sur moi<span
                                 class="fa-solid fa-user"></span></p></a>
 
-                        <nav id="Burger_Navigation">
+                       <nav id="Burger_Navigation">
                             <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
-                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;" aria-label="Chaîne YouTube"></span></a>
                             <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
                                 target="_blank"><span class="fa-brands fa-2x fa-steam"
-                                    style="color: #00355e;"></span></a>
+                                    style="color: #00355e;" aria-label="Steam"></span></a>
                             <a href="https://x.com/TeamCherryGames" target="_blank"><span
-                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;" aria-label="X"></span></a>
 
 
                         </nav>
@@ -90,7 +90,7 @@
     <main>
 
         <section id="Main_Jeu">
-            <iframe id="YTB" src="https://www.youtube.com/embed/6XGeJwsUP9c">
+            <iframe id="YTB" src="https://www.youtube.com/embed/6XGeJwsUP9c" title="Silksong Trailer">
             </iframe>
 
 
