--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
                 <nav id="Navigation">
                     <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
-                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                            class="fa-brands fa-2x fa-youtube" style="color: #a50000;" aria-label="Chaîne YouTube"></span></a>
                     <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank"><span
-                            class="fa-brands fa-2x fa-steam" style="color: #00355e;"></span></a>
+                            class="fa-brands fa-2x fa-steam" style="color: #00355e;" aria-label="Steam"></span></a>
                     <a href="https://x.com/TeamCherryGames" target="_blank"><span class="fa-brands fa-2x fa-x-twitter"
-                            style="color: #ffffff;"></span></a>
+                            style="color: #ffffff;" aria-label="X"></span></a>
 
 
                 </nav>
@@ -64,16 +64,15 @@
 
                         <nav id="Burger_Navigation">
                             <a href="https://www.youtube.com/@TeamCherry" target="_blank"><span
-                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;"></span></a>
+                                    class="fa-brands fa-2x fa-youtube" style="color: #a50000;" aria-label="Chaîne YouTube"></span></a>
                             <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
                                 target="_blank"><span class="fa-brands fa-2x fa-steam"
-                                    style="color: #00355e;"></span></a>
+                                    style="color: #00355e;" aria-label="Steam"></span></a>
                             <a href="https://x.com/TeamCherryGames" target="_blank"><span
-                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;"></span></a>
+                                    class="fa-brands fa-2x fa-x-twitter" style="color: #ffffff;" aria-label="X"></span></a>
 
 
                         </nav>
-
                     </div>
                 </nav>
 
